improved install page

--- a/Presentation/mobSocial.WebApp/pages/common/install.html
+++ b/Presentation/mobSocial.WebApp/pages/common/install.html
@@ -4,22 +4,22 @@
             <h4>mobSocial Installation</h4>
             <ol class="install-wizard-links">
                 <li ng-class="{'active' : activeStep == 'welcome', 'done': stepIndex > 0}">
-                    <a ng-click="step('welcome')">Welcome</a>
+                    <a>Welcome</a>
                 </li>
                 <li ng-class="{'active' : activeStep == 'license' , 'done': stepIndex > 1}">
-                    <a ng-click="step('license')">License</a>
+                    <a>License</a>
                 </li>
                 <li ng-class="{'active' : activeStep == 'configuration', 'done': stepIndex > 2}">
-                    <a ng-click="step('configuration')">Configuration</a>
+                    <a>Configuration</a>
                 </li>
                 <li ng-class="{'active' : activeStep == 'information', 'done': stepIndex > 3}">
-                    <a ng-click="step('configuration')">Information</a>
+                    <a>Information</a>
                 </li>
                 <li ng-class="{'active' : activeStep == 'review-configuration', 'done': stepIndex > 4}">
-                    <a ng-click="step('review-configuration')">Review</a>
+                    <a>Review</a>
                 </li>
                 <li ng-class="{'active' : activeStep == 'finish', 'done': stepIndex > 5}">
-                    <a ng-click="step('finish')">Installation Complete</a>
+                    <a>Installation Complete</a>
                 </li>
             </ol>
         </div>
