--- a/Presentation/mobSocial.WebApp/index.html
+++ b/Presentation/mobSocial.WebApp/index.html
@@ -28,6 +28,10 @@
     <!-- AdminLTE Skins. Choose a skin from the css/skins
          folder instead of downloading all of them to reduce the load. -->
     <link rel="stylesheet" href="themes/admin/AdminLTE/css/skins/_all-skins.min.css">
+
+    <!-- smart-area -->
+    <link rel="stylesheet" href="libraries/smart-area/smart-area.min.css">
+
     <link rel="stylesheet" href="themes/admin/AdminLTE/css/overrides.min.css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -67,6 +71,7 @@
     <script src="plugins/datepicker/bootstrap-datepicker.js"></script>
     <!-- bootbox-->
     <script src="plugins/bootbox/bootbox.min.js"></script>
+  
     <!-- CK Editor -->
     <script src="https://cdn.ckeditor.com/4.5.7/standard/ckeditor.js"></script>
     <script src="scripts/bundles/init.js"></script>
