client side implementation of signalr and notifications setup done

--- a/Presentation/mobSocial.WebApp/index.html
+++ b/Presentation/mobSocial.WebApp/index.html
@@ -44,6 +44,8 @@
 
     <!-- jQuery 2.2.3 -->
     <script src="libraries/jQuery/jquery-2.2.3.min.js"></script>
+    <!-- jQuery signalr -->
+    <script src="libraries/jQuery/jquery.signalR-2.2.1.min.js"></script>
     <!-- Bootstrap 3.3.6 -->
     <script src="libraries/bootstrap/js/bootstrap.min.js"></script>
     <!-- FastClick -->
