--- a/Presentation/mobSocial.WebApp/index.html
+++ b/Presentation/mobSocial.WebApp/index.html
@@ -70,6 +70,8 @@
     <script src="plugins/pace/pace.min.js"></script>
     <!-- select2-->
     <script src="plugins/select2/select2.min.js"></script>
+    <!-- slimScroll-->
+    <script src="plugins/slimScroll/jquery.slimscroll.min.js"></script>
     <!-- bootstrap datepicker -->
     <script src="plugins/datepicker/bootstrap-datepicker.js"></script>
     <!-- bootbox-->
