--- a/Presentation/mobSocial.WebApp/pages/users/user.profile.html
+++ b/Presentation/mobSocial.WebApp/pages/users/user.profile.html
@@ -123,7 +123,9 @@
                             <li ui-sref-active="active">
                                 <a ui-sref="layoutMobSocial.userprofile.tabs({ tab: 'videos', idOrUserName: user.UserName ? user.UserName : user.Id })">Videos</a>
                             </li>
-
+                            <li ui-sref-active="active">
+                                <a ui-sref="layoutMobSocial.userprofile.tabs({ tab: 'skills', idOrUserName: user.UserName ? user.UserName : user.Id })">Skills</a>
+                            </li>
                         </ul>
                         <div class="tab-content">
                             <div class="tab-pane active">
