Fixed page url for skill editor

--- a/Presentation/mobSocial.WebApp/pages/users/user.profile.edit.skills.html
+++ b/Presentation/mobSocial.WebApp/pages/users/user.profile.edit.skills.html
@@ -20,7 +20,7 @@
                         </tr>
                     </table>
                     <div ng-if="skill">
-                        <ng-include src="'/pages/skills/skill.editor.html'"></ng-include>
+                        <ng-include src="'/pages/skills/skill.editor.public.html'"></ng-include>
                     </div>
                 </div>
             </fieldset>
