--- a/Presentation/mobSocial.WebApp/pages/users/activity.html
+++ b/Presentation/mobSocial.WebApp/pages/users/activity.html
@@ -52,22 +52,21 @@
                                     </p>
                                     
                                 </div>
-                              
                                 <hr>
-                                <strong><i class="fa fa-map-marker margin-r-5"></i> Location</strong>
-                                <p class="text-muted">Malibu, California</p>
-                                <hr>
-                                <strong><i class="fa fa-pencil margin-r-5"></i> Skills</strong>
-                                <p>
-                                    <span class="label label-danger">UI Design</span>
-                                    <span class="label label-success">Coding</span>
-                                    <span class="label label-info">Javascript</span>
-                                    <span class="label label-warning">PHP</span>
-                                    <span class="label label-primary">Node.js</span>
-                                </p>
-                                <hr>
-                                <strong><i class="fa fa-file-text-o margin-r-5"></i> Notes</strong>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam fermentum enim neque.</p>
+                                <div ng-controller="skillController" ng-init="init()" block-ui>
+                                    <strong>
+                                        <i class="fa fa-trophy margin-r-5"></i> Skills
+                                        <a ui-sref="layoutMobSocial.twoColumns.editProfile({tab: 'skills'})" class="pull-right"><i class="fa fa-pencil"></i> </a>
+                                    </strong>
+                                    <p class="text-muted">
+                                        <span ng-repeat="skill in skills track by $index">
+                                            <a class="label margin-r-5" ng-class="{'label-info' : ($index + 1) % 2 == 0, 'label-danger' : ($index + 1) % 3 == 0, 'label-success' : ($index + 1) % 5 == 0, 'label-warning' : $index == 0 || ($index + 1) % 7 == 0}" href="/{{skill.SeName}}">
+                                                {{skill.Name}}
+                                            </a>
+                                        </span>
+                                    </p>
+
+                                </div>
                             </div>
                             <!-- /.box-body -->
                         </div>
