naming fixes to skill pages

--- a/Presentation/mobSocial.WebApp/pages/skills/skill.list.html
+++ b/Presentation/mobSocial.WebApp/pages/skills/skill.list.html
@@ -22,7 +22,7 @@
             <table class="table no-margin user-list">
                 <tr ng-repeat="skill in skills">
                     <td>
-                        {{skill.SkillName}}
+                        {{skill.Name}}
                     </td>
                     <td>
                         <span class="pull-right">
