--- a/Presentation/mobSocial.WebApp/pages/users/user.profile.edit.skills.html
+++ b/Presentation/mobSocial.WebApp/pages/users/user.profile.edit.skills.html
@@ -11,7 +11,7 @@
                         </tr>
                         <tr ng-repeat="skill in skills">
                             <td>
-                                <strong class="margin-r-5">{{skill.SkillName}}</strong>
+                                <strong class="margin-r-5">{{skill.Name}}</strong>
                             </td>
                             <td>
                                 <button class="btn btn-danger btn-sm pull-right" ng-click="deleteUserSkill(skill.UserSkillId)">Delete</button>
