--- a/Presentation/mobSocial.WebApp/pages/users/activity.html
+++ b/Presentation/mobSocial.WebApp/pages/users/activity.html
@@ -60,7 +60,7 @@
                                     </strong>
                                     <p class="text-muted">
                                         <span ng-repeat="skill in skills track by $index">
-                                            <a class="label margin-r-5" ng-class="{'label-info' : ($index + 1) % 2 == 0, 'label-danger' : ($index + 1) % 3 == 0, 'label-success' : ($index + 1) % 5 == 0, 'label-warning' : $index == 0 || ($index + 1) % 7 == 0}" href="/{{skill.SeName}}">
+                                            <a class="label margin-r-5" ng-class="{'label-info' : ($index + 1) % 2 == 0, 'label-danger' : ($index + 1) % 3 == 0, 'label-success' : ($index + 1) % 5 == 0, 'label-warning' : $index == 0 || ($index + 1) % 7 == 0}" ui-sref="layoutMobSocial.skill({ slug : skill.SeName})">
                                                 {{skill.Name}}
                                             </a>
                                         </span>
