support for minification added for UI scripts bundling

--- a/Presentation/mobSocial.WebApp/pages/users/user.edit.html
+++ b/Presentation/mobSocial.WebApp/pages/users/user.edit.html
@@ -1,7 +1,7 @@
 ﻿<div class="box">
     <div class="box-header with-border">
         <h1 class="box-title">
-            Edit User - {{user.Name}} <small><a ui-sref="layoutAdministration.users.list" ui-sref-opts="{reload: true}"> <i class="fa fa fa-arrow-circle-left"></i> back to user list</a></small>
+            Edit User - {{user.Name}} <small><a ui-sref="layoutAdministration.users.list"> <i class="fa fa fa-arrow-circle-left"></i> back to user list</a></small>
         </h1>
         <div class="pull-right">
             <a class="btn btn-danger btn-block" ng-click="delete()"><i class="fa fa-times"></i> Delete</a>
