--- a/Presentation/mobSocial.WebApp/pages/applications/application.list.html
+++ b/Presentation/mobSocial.WebApp/pages/applications/application.list.html
@@ -18,6 +18,7 @@
                         
                     </td>
                     <td>
+                        <button class="btn btn-default btn-sm pull-right margin-r-5" ui-sref="layoutApplication.twoColumns.listCustomFields({id : app.Id, type : 'user'})">Custom Fields</button>
                         <button class="btn btn-default btn-sm pull-right margin-r-5" ui-sref="layoutApplication.twoColumns.editApplication({id : app.Id})">Edit</button>
                     </td>
                 </tr>
