modified custom fields to support application specific fields

--- a/Presentation/mobSocial.WebApp/pages/applications/application.customfields.list.html
+++ b/Presentation/mobSocial.WebApp/pages/applications/application.customfields.list.html
@@ -21,6 +21,7 @@
                             <a ng-click="edit(customField)">{{customField.Label}}</a>
                             <small class="text-muted text-capitalize text-bold">({{getFieldTypeName(customField.FieldType)}})</small>
                             <a class="btn btn-secondary btn-sm pull-right" ng-click="edit(customField)">Edit</a>
+                            <a class="btn btn-secondary btn-sm pull-right" ng-click="deleteField(customField)">Delete</a>
                         </td>
                     </tr>
                 </tbody>
