--- a/Presentation/mobSocial.WebApp/pages/applications/application.customfields.list.html
+++ b/Presentation/mobSocial.WebApp/pages/applications/application.customfields.list.html
@@ -20,8 +20,8 @@
                         <td>
                             <a ng-click="edit(customField)">{{customField.Label}}</a>
                             <small class="text-muted text-capitalize text-bold">({{getFieldTypeName(customField.FieldType)}})</small>
-                            <a class="btn btn-secondary btn-sm pull-right" ng-click="edit(customField)">Edit</a>
-                            <a class="btn btn-secondary btn-sm pull-right" ng-click="deleteField(customField)">Delete</a>
+                            <a class="btn btn-danger btn-sm pull-right" ng-click="deleteField(customField)">Delete</a>
+                            <a class="btn btn-primary btn-sm pull-right margin-r-5" ng-click="edit(customField)">Edit</a>
                         </td>
                     </tr>
                 </tbody>
